--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="google-site-verification" content="mWw-QHXN1nv4ekTSAJkJCH9lh4w1LG5gffq7I5rYSCo" />
-    <meta name="keywords" content="flatpack, assembly, flat-pack, furniture assembly, furniture specialist, flat pack, ikea assembler, Newcastle flatpack assembly service, furniture fitter">
+    <meta name="keywords" content="flatpack, assembly, flat-pack, furniture assembly,beds, services, furniture repair, sofa corner, furniture specialist, flat pack, ikea assembler,Wardrobe assembly, Newcastle flatpack assembly service, furniture fitter">
     <meta name="description" content="Contact us for the best professional furniture assembly and repair services for residential or office furniture.">
     <title>Furniture assembly and repairs | Newcastle upon-tyne</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -193,8 +193,10 @@ Contact us with confidence at Fastfixes phone 07465808079 or email roprim26@gmai
             <div class="u-align-left u-border-7 u-border-no-bottom u-border-no-left u-border-no-right u-border-palette-3-base u-container-align-left u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <span class="u-file-icon u-icon u-text-palette-3-base u-icon-3"><img src="/images/481037-c757008b.png" alt=""></span>
-                <h5 class="u-text u-text-6" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250"> Countertop Repair</h5>
-                <p class="u-text u-text-7"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed vulputate mi sit amet mauris commodo quis imperdiet. Leo duis ut diam quam nulla porttitor. </p>
+                <h5 class="u-text u-text-6" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250"> Wardrobe assembly </h5>
+                <p class="u-text u-text-7"> Our Fast Fixes specialist assembles and installs simple wardrobes and chests of drawers, with 2, 3, 4 doors, custom-made or purchased from the store, which come in pre-packed boxes.
+Sliding door wardrobes, glass and mirrored wardrobes are carefully assembled by the Fastfixes specialist
+Contact a specialist in assembling furniture purchased from Ikea, Argos, Next, Amazon etc. in stores or online at the phone number 0746580807 or at the email address roprim26@gmail.com. </p>
               </div>
             </div>
             <div class="u-align-left u-border-7 u-border-no-bottom u-border-no-left u-border-no-right u-border-palette-3-base u-container-align-left u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
